--- a/app/src/main/res/layout/linear_main.xml
+++ b/app/src/main/res/layout/linear_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/usernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/username" />
+        android:text="@string/username_label" />
 
     <EditText
         android:id="@+id/usernameEditText"
